--- a/_1580439390822.html
+++ b/_1580439390822.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%= username %></title>
+    <title>ianclark226</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <h1
-    >Hello, my name is <%= username %>.</h1
+    >Hello, my name is ianclark226.</h1
         >
-    <h5>My public repos count is <%= data.public_repos %>.</h5>
-    <h5>My followers <%= data.followers %>.</h5>
-    <h5>I am following  <%= data.following %>.</h5>
+    <h5>My public repos count is 10.</h5>
+    <h5>My followers 14.</h5>
+    <h5>I am following  6.</h5>
 </body>
 </html>
